--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,7 @@
 book_filename: psych6060
 clean: [packages.bib, bookdown.bbl]
 delete_merged_file: true
+output_dir: "docs"
 language:
   label:
     fig: "FIGURE "
